policies/tests/require-review-source/garbage-collector/resources.yaml
apiVersion: platform.jordandesigns.io/v1alpha1
kind: Database
metadata:
  name: db-being-deleted
  namespace: team-demo
  deletionTimestamp: '2026-10-02T05:58:25Z'
  finalizers:
  - foregroundDeletion
spec:
  crossplane:
    compositionSelector:
      matchLabels:
        platform.jordandesigns.io/cloud: aws
  size: small
  region: us-east
  owner: jordann6
  costCenter: cc-1001
  environment: dev
