policies/tests/require-review-source/garbage-collector/userinfo.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: gc
userInfo:
  username: system:serviceaccount:kube-system:generic-garbage-collector
